worked on tinyone

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+            "styles": ["bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -103,5 +103,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "462b330b-e5f1-42d1-b56c-d99bd1a96c2c"
   }
 }
